bk_ida/gccida/g0/do_compare_and_jump
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_compare_and_jump/src/expr.c:10532:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code signed_code, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_compare_and_jump/src/expr.c:10533:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code unsigned_code, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_compare_and_jump/src/expr.c:10537:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v5; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_compare_and_jump/src/expr.c:10539:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+28h] [rbp-28h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_compare_and_jump/src/expr.c:10573:55: error: use of undeclared identifier 'machine_mode'
do_compare_rtx_and_jump( op0, op1, code, unsignedp, ( machine_mode)mode, v6, if_false_label, if_true_label); 
                                                      ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_compare_and_jump/src/obj/expr.o] Error 1
